[package]
name = "sonicrab_mq"
version = "0.1.0"
edition = "2021"

[lib]
name = "sonicrab_client"
path = "src/lib.rs"

[dependencies]
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
memmap2 = "0.9.5" 
nix = {version = "*",features = ["zerocopy"]}
byteorder  = "*"
bincode = "*"
chrono = "*"
dashmap = "6.1.0"
toml = "0.5"
regex = "*"
